--- a/theme/style.css
+++ b/theme/style.css
@@ -21,3 +21,13 @@
   url('https://componenten.nijmegen.nl/v6.4.0/oranda_bt.bde3d05f.woff2') format('woff2'),
   url('https://componenten.nijmegen.nl/v6.4.0/oranda_bt.05235f9a.woff') format('woff');
 }
+
+
+/* This cannot be manged by tokens.. */
+.openforms-subtitle{
+  font-family: "Oranda,sans-serif";
+  font-feature-settings: "liga";
+  text-rendering: optimizeLegibility;
+  color: #a80a2d;
+  font-size: 32px;
+}
